; ModuleID = '/home/carl/AnghaBench/linux/net/batman-adv/extr_bat_v.c_batadv_v_store_sel_class.c'
source_filename = "/home/carl/AnghaBench/linux/net/batman-adv/extr_bat_v.c_batadv_v_store_sel_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.batadv_priv = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [34 x i8] c"B.A.T.M.A.N. V GW selection class\00", align 1
@EINVAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.batadv_priv*, i8*, i64)* @batadv_v_store_sel_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @batadv_v_store_sel_class(%struct.batadv_priv* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.batadv_priv*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.batadv_priv* %0, %struct.batadv_priv** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.batadv_priv*, %struct.batadv_priv** %5, align 8
  %11 = getelementptr inbounds %struct.batadv_priv, %struct.batadv_priv* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @batadv_parse_throughput(i32 %12, i8* %13, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64* %9)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %3
  %17 = load i64, i64* @EINVAL, align 8
  %18 = sub i64 0, %17
  store i64 %18, i64* %4, align 8
  br label %37

19:                                               ; preds = %3
  %20 = load %struct.batadv_priv*, %struct.batadv_priv** %5, align 8
  %21 = getelementptr inbounds %struct.batadv_priv, %struct.batadv_priv* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = call i64 @atomic_read(i32* %22)
  store i64 %23, i64* %8, align 8
  %24 = load %struct.batadv_priv*, %struct.batadv_priv** %5, align 8
  %25 = getelementptr inbounds %struct.batadv_priv, %struct.batadv_priv* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %9, align 8
  %28 = call i32 @atomic_set(i32* %26, i64 %27)
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* %9, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %19
  %33 = load %struct.batadv_priv*, %struct.batadv_priv** %5, align 8
  %34 = call i32 @batadv_gw_reselect(%struct.batadv_priv* %33)
  br label %35

35:                                               ; preds = %32, %19
  %36 = load i64, i64* %7, align 8
  store i64 %36, i64* %4, align 8
  br label %37

37:                                               ; preds = %35, %16
  %38 = load i64, i64* %4, align 8
  ret i64 %38
}

declare dso_local i32 @batadv_parse_throughput(i32, i8*, i8*, i64*) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @atomic_set(i32*, i64) #1

declare dso_local i32 @batadv_gw_reselect(%struct.batadv_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
